force-app/main/default/objects/Transportation__c/Transportation__c.object-meta.xml
<CustomObject>
    <label>Transport</label>
    <nameField>
        <label>Transport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>