force-app/main/default/objects/Transportation__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Name</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipName>Cities</relationshipName>
    <type>Lookup</type>
</CustomField>