force-app/main/default/objects/Transportation__c/fields/Cost_of_Petrol__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Petrol__c</fullName>
    <label>Price for 1L petrol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>