force-app/main/default/objects/Transportation__c/fields/Public_Transport_Costs__c.field-meta.xml
<CustomField>
    <fullName>Public_Transport_Costs__c</fullName>
    <label>Public Transport Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>