force-app/main/default/objects/Transportation__c/fields/Transport_Costs__c.field-meta.xml
<CustomField>
    <fullName>Transport_Costs__c</fullName>
    <formula>Public_Transport_Costs__c +IF(Car__r.Range__c=0,0, Cost_of_Petrol__c * (Distance__c * (Car__r.Tank_Capacity__c/Car__r.Range__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>