force-app/main/default/objects/Transportation__c/fields/Transport_URL__c.field-meta.xml
<CustomField>
    <fullName>Transport_URL__c</fullName>
    <label>Transport URL</label>
    <type>Url</type>
</CustomField>