force-app/main/default/objects/Transportation__c/recordTypes/Bus_Train_Mode.recordType-meta.xml
<RecordType>
    <fullName>Bus_Train_Mode</fullName>
    <active>true</active>
    <label>Bus/Train Mode</label>
</RecordType>