force-app/main/default/objects/Transportation__c/recordTypes/CarMode.recordType-meta.xml
<RecordType>
    <fullName>CarMode</fullName>
    <active>true</active>
    <label>Car Mode</label>
</RecordType>